# OStrich

./: README
ostrich_branch/: configure  configure.ac
ostrich_branch/src/plugins/sched/: Makefile.am  Makefile.in
ostrich_branch/src/plugins/sched/ostrich/: Makefile.am  Makefile.in  ostrich.c  ostrich.h  ostrich_wrapper.c
